fixed portfolio icon alignment and spacing also added the code and WWW text for each icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,10 +229,19 @@ nav .icon-burger .line {
   
 }
 
+.dev-icon-container {
+  display: flex;
+flex-direction: row;
+}
+
 .dev-icon {
 display: flex;
+flex-direction: row;
 margin: 5px;
+}
 
+.dev-icon h4 {
+  margin: 5px;
 }
 
 .dev-pic {
